# lenny-communication

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
source/: CMakeLists.txt
source/apps/: CMakeLists.txt
source/apps/TCPTest/: CMakeLists.txt  TCPClient.cpp  TCPServer.cpp
source/apps/UDPTest/: CMakeLists.txt  UDPClient.cpp  UDPServer.cpp
source/apps/WebRTCTest/: CMakeLists.txt  main.cpp
source/communication/: CMakeLists.txt  README.md
source/communication/include/lenny/communication/: TCPClient.h  TCPServer.h  UDPClient.h  UDPServer.h  Utils.h  WebRTCClient.h
source/communication/src/: TCPClient.cpp  TCPServer.cpp  UDPClient.cpp  UDPServer.cpp  Utils.cpp  WebRTCClient.cpp
